--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                             @click="filterEnglishListImportance3">重要性3</a>
                         </li>
                     </ul>
-                    <div class="tab-content" id="myTabContent">
+                    <!-- 表格 -->
+                    <div class="tab-content scrollarea" id="myTabContent">
                         <!-- 所有單字 -->
                         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                             <table class="table table-hover table-sm">
